Tue Apr  6 10:45:22 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* mahjongg.c: use g_strcasecmp instead of strcasecmp.

1999-02-09  Tomas Ogren  <stric@ing.umu.se>

	* mahjongg.c: Removed evil gtk_widget_realize call..

1999-02-07  Tomas Ogren  <stric@ing.umu.se>

	* mahjongg.c: Realize the main window and fvwm gets happier...

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* mahjongg.c (load_tiles): Warn the user in the GUI, not with a printf.
	Kill file menu too.

1999-01-10  Nat Friedman  <nat@nat.org>

	* mahjongg.c (main): Added an AppBar.  Added a friendly welcome
 	message.

	Standardized the menus.

1999-01-08  Callum McKenzie <callum@physics.otago.ac.nz>
	
	* mahjongg.c : Fixed up the hint code to not crash. Also
	changed the use of the "selected" field in tile to make
	sure that hints and selection interacted nicely. 

1998-12-16  Jonathan Blandford  <jrb@redhat.com>

	* mahjongg.c (main): now use the new toolbar code.

1998-12-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* mahjongg.c (create_mahjongg_board): Use gtk_widget_set_usize()
	instead of gnome_canvas_set_size().

1998-11-19  Francisco Bustamante <pancho@nuclecu.unam.mx>
	* mahjongg.c: Changing the map works now. Memory leaking is
	greatly reduced because images are destroyed after use. Changed
	gnome_dialog_set_modal (or whatever) to
	gtk_window_set_modal. Changing the tile images works
	too. Compiling warnings are gone. Most warnings during the game
	are gone too. Upped version to 0.99.1
	
1998-11-15  Francisco Bustamante <pancho@nuclecu.unam.mx>
	* mahjongg.c: All the tile drawing is now done by
	gnome-canvas. The code is somewhat cleaner, and the redraws are
	definitely better. TODO: make changing map and changing tile
	images work. When you use gnome_canvas_item_set to change the
	image, do we need to destroy the old image? Version 0.99.0
	* default.png: Someone did something to the transparent parts of
	the image, so I put them again. This is to make tiles nicer.